--- a/src/assets/app.jade
+++ b/src/assets/app.jade
@@ -1,4 +1,8 @@
 doctype
 html
- body
-  script(src="../js/app.js")
+  head
+    title gulp-webpack
+    //- link(href="../css/app.css" type="text/css" rel="stylesheet")
+  body
+    div.div1 div1 
+    script(src="../js/app.js") 
